--- a/users/templates/users/Profile/show_profile.html
+++ b/users/templates/users/Profile/show_profile.html
@@ -93,6 +93,13 @@
 {% endif %}
 
 
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        window.scrollTo(0, 0);
+    });
+</script>
+
+
 {% endblock %}
 
 </body>
