--- a/users/templates/users/Profile/update_profile.html
+++ b/users/templates/users/Profile/update_profile.html
@@ -230,6 +230,11 @@
     });
 </script>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        window.scrollTo(0, 0);
+    });
+</script>
     
     
 {% endblock %}
