edit client tests to pass admin tests

--- a/client/templates/client/users_management.html
+++ b/client/templates/client/users_management.html
@@ -37,8 +37,8 @@
         <tbody>
             {% for user in users %}
             <tr onclick="window.location.href='{% url 'user_detail_view' user.id %}'" style="cursor: pointer;">
-                <td>{{ user.id }}</td>
-                <td>{{ user.full_name }}</td>
+                <td>{{ user.user.id }}</td>
+                <td>{{ user.user.full_name }}</td>
                 <td>{{ user.user.email }}</td>
                 <td>{{ user.age|default:"N/A" }}</td>
                 <td>{{ user.gender|default:"N/A" }}</td>
