--- a/client/templates/client/partials/navbar.html
+++ b/client/templates/client/partials/navbar.html
@@ -23,12 +23,26 @@
                 <span>Programs</span>
             </a>
         </li>
-        <li></li>
+        <li>
             <a href="{% url 'client_modules' %}" class="{%if request.path == '/client_modules/' %}active{% endif %}">
                 <img src="{% static 'img/modules.svg' %}" alt="Modules" class="icon">
                 <span>Modules</span>
             </a>
         </li>
+        </li>
+        <a href="{% url 'reports' %}" class="{%if request.path == '/reports/' %}active{% endif %}">
+            <img src="{% static 'client/img/reports.svg' %}" alt="Reports" class="icon">
+            <span>Reports</span>
+        </a>
+        </li>
+
+        </li>
+        <a href="{% url 'category_list' %}" class="{%if request.path == '/category_list/' %}active{% endif %}">
+            <img src="{% static 'client/img/category.svg' %}" alt="Categories" class="icon">
+            <span>Categories</span>
+        </a>
+        </li>
+        
         <div class="logout">
             <a href="{% url 'log_out' %}" class="{%if request.path == '/log_out/' %}active{% endif %}">
             <img src="{% static 'img/logout.svg' %}" alt="Logout" class="icon">
