add moduleRating report and add reports to the side bar

--- a/client/templates/client/partials/navbar.html
+++ b/client/templates/client/partials/navbar.html
@@ -29,6 +29,12 @@
                 <span>Modules</span>
             </a>
         </li>
+        <li>
+            <a href="{% url 'reports' %}" class="{%if request.path == '/reports/' %}active{% endif %}">
+                <img src="{% static 'img/reports.svg' %}" alt="Reports" class="icon">
+                <span>Reports</span>
+            </a>
+        </li>
         <div class="logout">
             <a href="{% url 'log_out' %}" class="{%if request.path == '/log_out/' %}active{% endif %}">
             <img src="{% static 'img/logout.svg' %}" alt="Logout" class="icon">
