--- a/users/templates/users/partials/navbar.html
+++ b/users/templates/users/partials/navbar.html
@@ -1,71 +1,38 @@
 {% load static %}
 <div class="sidebar">
     <div class="logo">
-        <img src="{% static 'users/img/logo.svg' %}" alt="Logo" class="logoIcon">
+        <img src="{% static 'img/logo.svg' %}" alt="Logo" class="logoIcon">
         <span class="brand">ReWork</span>
     </div>
     <ul class="nav-links">
         <li>
             <a href="{% url 'dashboard' %}" class="{%if request.path == '/dashboard/' %}active{% endif %}">
-                <img src="{% static 'users/img/dashboard.svg' %}" alt="Dashboard" class="icon">
+                <img src="{% static 'img/dashboard.svg' %}" alt="Dashboard" class="icon">
                 <span>Dashboard</span>
             </a>
         </li>
         <li>
-<<<<<<< HEAD
-<<<<<<< HEAD
             <a href="{% url 'modules' %}" class="{%if request.path == '/modules/' %}active{% endif %}">
-                <img src="{% static 'users/img/modules.svg' %}" alt="Modules" class="icon">
-                <span>Modules</span>
-            </a>
-        </li>
-
-        <li>
-            <a href="{% url 'userResponce' %}" class="{% if request.path == '/userResponce/' %} active {% endif %}">
-                <i class="fa-regular fa-pen-to-square icon"></i>
-                <span>Response</span>
-            </a>
-        </li>        
-
-=======
-=======
->>>>>>> 6aa4287965c632de82dd98c4f9905f2dbac0a9a0
-            <a href="{% url 'userModules' %}" class="{%if request.path == '/userModules/' %}active{% endif %}">
                 <img src="{% static 'img/modules.svg' %}" alt="Modules" class="icon">
                 <span>Modules</span>
             </a>
         </li>
-<<<<<<< HEAD
->>>>>>> profilePage
-=======
->>>>>>> 6aa4287965c632de82dd98c4f9905f2dbac0a9a0
         <li>
             <a href="{% url 'profile' %}" class="{%if request.path == '/profile/' %}active{% endif %}">
-                <img src="{% static 'users/img/profile.svg' %}" alt="Profile" class="icon">
+                <img src="{% static 'img/profile.svg' %}" alt="Profile" class="icon">
                 <span>Profile</span>
             </a>
         </li>
         <div class="logout">
-<<<<<<< HEAD
-<<<<<<< HEAD
-            <a href="{% url 'log_out' %}" class="{%if request.path == '/log_out/' %}active{% endif %}">
-            <img src="{% static 'users/img/logout.svg' %}" alt="Logout" class="icon">
+            <a href="{% url 'logout' %}" class="{%if request.path == '/logout/' %}active{% endif %}">
+            <img src="{% static 'img/logout.svg' %}" alt="Logout" class="icon">
             <span>Logout</span>
             </a>
         </div>
-=======
-=======
->>>>>>> 6aa4287965c632de82dd98c4f9905f2dbac0a9a0
-            <a href="#" id="logout-link">
-                <img src="{% static 'users/img/logout.svg' %}" alt="Logout" class="icon">
-                <span>Logout</span>
-            </a>
-        </div>       
-        
-<<<<<<< HEAD
->>>>>>> profilePage
-=======
->>>>>>> 6aa4287965c632de82dd98c4f9905f2dbac0a9a0
     </ul>
+
+    <!-- <div class="toggle">
+        <img src="{% static 'img/toggle.svg' %}" alt="Toggle Menu" class="toggleIcon">
+    </div> -->
 
 </div>
