--- a/users/static/users/css/user_authentication.css
+++ b/users/static/users/css/user_authentication.css
@@ -1,5 +1,6 @@
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Manrope', sans-serif;
     margin: 0;
     padding: 0;
     background-color: white;
