Fix journal save and create views tests

--- a/users/templates/users/journal.html
+++ b/users/templates/users/journal.html
@@ -18,7 +18,9 @@
 
     <form id="journal-form">
         {% csrf_token %}
-        <input type="hidden" id="journal-date" name="date" value="{{ selected_date }}">
+        <input type="date" id="journal-date" name="date" value="{{ selected_date|date:'Y-m-d' }}" required>
+
+
 
         <!-- Connected with Family -->
         <div class="journal-entry">
@@ -109,8 +111,7 @@
         <!-- Sleep Hours -->
         <div class="journal-entry">
             <label for="sleep_hours">How many hours did you sleep?</label>
-            <input type="number" id="sleep_hours" name="sleep_hours" min="0" max="24" 
-                   value="{{ journal_entry.sleep_hours|default_if_none:'' }}" required>
+            <input type="number" name="sleep_hours" value="{{ journal_entry.sleep_hours|default_if_none:'' }}">
         </div>
 
         
