--- a/client/templates/client/programs.html
+++ b/client/templates/client/programs.html
@@ -106,7 +106,7 @@
             margin-top: 15px;
         }
 
-        .view-btn {
+        .edit-btn {
             flex: 2; 
             padding: 4px 6px;
             border-radius: 5px;
@@ -127,12 +127,12 @@
             max-width: 100%; 
         }
 
-        .view-btn {
+        .edit-btn {
             background: white;
             color: #3A88F6;
         }
 
-        .view-btn:hover {
+        .edit-btn:hover {
             background: #f0f0f0;
         }
 
@@ -168,7 +168,7 @@
                 </ul>                
             
                 <div class="buttons">
-                    <a href="{% url 'program_detail' program.id %}" class="view-btn">View</a>
+                    <a href="{% url 'program_detail' program.id %}" class="edit-btn">Edit</a>
                     <a href="{% url 'delete_program' program.id %}" class="delete-btn" onclick="return confirm('Are you sure you want to delete this program?');">Delete</a>
                 </div>
             </div>
