--- a/users/templates/users/userModules.html
+++ b/users/templates/users/userModules.html
@@ -42,7 +42,7 @@
         }
 
         .module-card {
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: #ADD8E6;
             background-size: cover;
             background-position: center;
             padding: 20px;
@@ -169,7 +169,7 @@
 
         <div class="module-grid">
             {% for module in module_data %}
-                <div class="module-card" style="background-image: url('{% static module.background_image %}');">
+                <div class="module-card">
                     <h5>{{ module.title }}</h5>
                     <p>{{ module.description }}</p>
                     <div class="progress-bar-container">
