--- a/users/static/users/css/journal.css
+++ b/users/static/users/css/journal.css
@@ -145,3 +145,10 @@ input:focus, select:focus, textarea:focus {
     from { opacity: 0; transform: translateY(-10px); }
     to { opacity: 1; transform: translateY(0); }
 }
+
+
+.nav-links a.active {
+    font-weight: bolder;
+    color: white;
+    background-color: #F24505;
+}
