--- a/users/templates/users/journal.html
+++ b/users/templates/users/journal.html
@@ -3,6 +3,7 @@
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'users/css/journal.css' %}">
+    <script src="{% static 'users/js/journal.js' %}"></script>
 {% endblock %}
 
 {% block title %}Daily Journal - ReWork{% endblock %}
