--- a/client/templates/client/partials/navbar.html
+++ b/client/templates/client/partials/navbar.html
@@ -34,7 +34,7 @@
        
         
             <a href="{% url 'reports' %}" class="{%if request.path == '/reports/' %}active{% endif %}">
-                <img src="{% static 'img/reports.svg' %}" alt="Reports" class="icon">
+                <img src="{% static 'client/img/reports.svg' %}" alt="Reports" class="icon">
                 <span>Reports</span>
             </a>
         </li>
