--- a/client/templates/client/create_program.html
+++ b/client/templates/client/create_program.html
@@ -29,10 +29,25 @@
                 <label for="{{ form.description.id_for_label }}" class="form-label description">2. Description:</label>
                 {{ form.description }}
             </div>
+            <div class="mb-3">
+                <label class="form-label">3. Select or Create Categories:</label>
+                <div class="category-box p-3">
+                    <ul class="list-unstyled">
+                        {% for category in form.categories.field.queryset %}
+                            <li class="d-flex align-items-center">
+                                <input type="checkbox" name="categories" value="{{ category.id }}">
+                                <label class="ms-2">{{ category.name }}</label>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    {{ form.new_category }}
+                </div>
+            </div>
+            
         
             <!-- Filter Section -->
             <div class="mb-3 d-flex align-items-center justify-content-between">
-                <label class="form-label">3. Select Modules within the program:</label>
+                <label class="form-label">4. Select Modules within the program:</label>
 
                 <!-- Dropdown Filter Button -->
                 <div class="dropdown ms-auto">
@@ -73,7 +88,7 @@
                 </ul>
             </div>
         
-            <label class="form-label mt-3">4. Arrange Selected Modules: </label>
+            <label class="form-label mt-3">5. Arrange Selected Modules: </label>
             <ul class="list-unstyled sortable-list" id="sortableModules"></ul>
         
             <button type="submit" class="btn btn-primary saveProgram">Save Program</button>
