--- a/client/templates/client/partials/navbar.html
+++ b/client/templates/client/partials/navbar.html
@@ -45,9 +45,9 @@
             </a>
         </li>
         <div class="logout">
-            <a href="{% url 'log_out' %}" class="{%if request.path == '/log_out/' %}active{% endif %}">
-            <img src="{% static 'img/logout.svg' %}" alt="Logout" class="icon">
-            <span>Logout</span>
+            <a href="#" id="logout-link">
+                <img src="{% static 'users/img/logout.svg' %}" alt="Logout" class="icon">
+                <span>Logout</span>
             </a>
         </div>
     </ul>
