--- a/users/static/users/css/contact_us_and_about.css
+++ b/users/static/users/css/contact_us_and_about.css
@@ -1,4 +1,5 @@
 /*------------------------- CONTACT US ---------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 * {
     margin: 0;
     padding: 0;
