--- a/users/static/users/css/user_authentication.css
+++ b/users/static/users/css/user_authentication.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 body {
     font-family: 'Manrope', sans-serif;
     margin: 0;
