Fix navbar logout url

--- a/users/templates/users/partials/navbar.html
+++ b/users/templates/users/partials/navbar.html
@@ -42,9 +42,8 @@
             </a>
         </li>
         <div class="logout">
-<<<<<<< Updated upstream
 
-            <a href="{% url 'log_out' %}" class="{%if request.path == '/log_out/' %}active{% endif %}">
+            <a href="#" class="{%if request.path == '/log_out/' %}active{% endif %}" id="logout-link">
             <img src="{% static 'users/img/logout.svg' %}" alt="Logout" class="icon">
             <span>Logout</span>
             </a>
@@ -52,13 +51,6 @@
 
             
         
-=======
-            <a href="#" id="logout-link">
-                <img src="{% static 'users/img/logout.svg' %}" alt="Logout" class="icon">
-                <span>Logout</span>
-            </a>
-        </div>
->>>>>>> Stashed changes
           
         
     </ul>
